--- a/drivers/platform/lenovo/Kconfig
+++ b/drivers/platform/lenovo/Kconfig
@@ -14,4 +14,10 @@ config MACH_LENOVO_KUNTAO
 	help
 	  Support for Lenovo P2 (kuntao)
 
+config MACH_LENOVO_TBX704
+	bool "TBX704 board"
+	select MACH_LENOVO_MSM8953
+	help
+	  Support for Lenovo Tab 4 10 Plus (TBX704)
+
 endmenu
