Port more changes

--- a/arch/arm64/configs/twrp_tbx704_defconfig
+++ b/arch/arm64/configs/twrp_tbx704_defconfig
@@ -690,9 +690,8 @@ CONFIG_TOUCHSCREEN_GT910P=y
 CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
 CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
 CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
-#CONFIG_TOUCHSCREEN_GT9XX_v28=y
-#CONFIG_TOUCHSCREEN_GT9XX_UPDATE=y
-#CONFIG_TOUCHSCREEN_GT9XX_TOOL=y
+CONFIG_COULO_METER=y
+
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
